--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-# Node modules
-node_modules/
 
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules
 
-# Environment variables
-.env
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Vercel output
-.vercel/
-
-# Build output (caso use build tools)
-dist/
-build/
-
-# VSCode settings
-.vscode/
-
-# Outros arquivos temporários
-*.swp
-*.swo
